FullQa New/src/objects/RSM_Region__c.object
<CustomObject>
    <description>Purpose: Identify Geo locations based on Zip codes for RSM Sales managment
Integrated: Yes - with Zip code and RSM Territories. Used in DE for routing
Change: Level 1 
Custodian: Sales Operations - Amy Moser</description>
    <fields>
        <fullName>CaseSafeId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Region CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purpose: Manager of the Sales Region 
Integrated: Used for routing leads and Opp via distribution engine.</description>
        <label>Region Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RSM_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Development Representative Assigned to the Region</description>
        <label>SDR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RSM_Regions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RSM Region</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region_Manager__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SDR__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RSM Region</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>